--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,20 @@
     box-shadow: 10px 10px 5px whitesmoke;
 }
 
+#container{
+    width: 600px;
+    height: 400px;
+    position: relative;
+    background: cyan;
+}
+
+#animate{
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+    position: absolute;
+    background: red;
+}
+
+
+
