--- a/css/style.css
+++ b/css/style.css
@@ -17,5 +17,11 @@
     background: red;
 }
 
+.darkCard{
+    width: 18rem; 
+    height: 35rem; 
+    border-style: hidden; 
+    box-shadow: 0 4px 8px 0 rgba(196, 196, 196, 0.2), 0 6px 20px 0 rgba(196, 196, 196, 0.19)
+}
 
 
