--- a/css/style.css
+++ b/css/style.css
@@ -24,4 +24,10 @@
     box-shadow: 0 4px 8px 0 rgba(196, 196, 196, 0.2), 0 6px 20px 0 rgba(196, 196, 196, 0.19)
 }
 
+.poster{
+    width:100%; 
+    height: 100%; 
+    object-fit: cover;
+}
+
 
